--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-
-    tools:context=".MainActivity">
+    tools:context=".registration">
 
     <ImageView
         android:id="@+id/imageView"
@@ -17,6 +16,53 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/logo" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_gravity="center"/>
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:text="Name" />
+
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="20"
+        android:padding="10dp"
+android:layout_marginRight="10dp"
+        android:background="@drawable/editext"
+        android:layout_marginLeft="10dp"
+        android:inputType="text" />
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:text="Email" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="20"
+        android:padding="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/editext"
+
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/textView2"
@@ -33,10 +79,10 @@
         android:layout_height="wrap_content"
         android:ems="20"
         android:padding="10dp"
-
-        android:background="@drawable/editext"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:background="@drawable/editext"
+
         android:inputType="phone" />
     <TextView
         android:id="@+id/textView3"
@@ -50,7 +96,7 @@
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
-       android:background="@drawable/editext"
+        android:background="@drawable/editext"
         android:layout_height="wrap_content"
         android:ems="10"
         android:padding="10dp"
@@ -58,16 +104,7 @@
         android:layout_marginLeft="10dp"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:textColor="#fff"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:text="Login" />
+
 
     <Button
         android:id="@+id/reg"
@@ -77,6 +114,5 @@
         android:textColor="#fff"
         android:layout_margin="15dp"
         android:text="Register" />
-
 
 </LinearLayout>
